modules/gdscript/tests/scripts/analyzer/errors/local_const_as_type_use_not_type.gd
enum MyEnum {A}

func test():
	const E = MyEnum.A
	var e: E
